# ticket-system

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.ticket  Dockerfile.ticket.alpine  Dockerfile.vacancy  Dockerfile.vacancy.alpine  Makefile  README.md  README.md.backup  README.md.backup-corrupt  build-optimized.sh  debug_pods.sh  docker-compose.yml  pyproject.toml  test_redis_direct.py  test_redis_integration.py  test_redis_k8s.py  test_redis_k8s_debug.py
docs/: DOCKER_OPTIMIZATION.md  KUBERNETES_DEPLOY_SUCCESS.md  SESSION_SUMMARY.md
docs/adr/: 001-dual-mode-architecture.md  002-kubernetes-autoscaling.md  005-asyncio-lock-for-stock.md  README.md
docs/architecture/: ARCHITECTURE_IMPROVEMENTS.md  IMPROVEMENTS.md  IMPROVEMENTS_APPLIED.md  MIGRATION_SUMMARY.md
docs/guides/: AUTOSCALING_GUIDE.md  AUTOSCALING_SUMMARY.md  DUAL_MODE_GUIDE.md  MAKEFILE_GUIDE.md
docs/performance/: K8S_LOAD_TEST_RESULTS.md  PERFORMANCE_BASELINE.md  PERFORMANCE_QUICK_REFERENCE.md  PERFORMANCE_TEST_SUMMARY.md
docs/troubleshooting/: QUICK_FIX_TOO_MANY_FILES.md  TROUBLESHOOTING.md
k8s/: README.md  configmap.yaml  ingress.yaml  namespace.yaml  redis-deployment.yaml  ticket-deployment-registry.yaml  ticket-deployment.yaml  ticket-hpa.yaml  vacancy-deployment-registry.yaml  vacancy-deployment.yaml  vacancy-hpa.yaml
scripts/: install-metrics-server.sh  run_monolith.py  run_ticket.py  run_vacancy.py
src/apps/: __init__.py  monolith.py
src/common/: __init__.py  config.py  http_client.py  logging.py  models.py  redis_client.py  (+1 more)
(+22 files in other folders)
